# VM-OS-Huawei

./: README.md
Complex/: Makefile
Complex/include/: Complex.hh
Complex/source/: Complex.cc  test.cc
Complex/tests/: test.cc
Dictionary/: CMakeLists.txt
Dictionary/corrector/: CMakeLists.txt
Dictionary/corrector/include/: corrector.hh
Dictionary/corrector/src/: corrector.cc
Dictionary/corrector/tests/: CMakeLists.txt  corrector-test.cc  lev-distance-test.cc  test_data_base  test_learn  test_wrong  texts
Dictionary/hashmap/: CMakeLists.txt
Dictionary/hashmap/include/: hashmap.hh
Dictionary/hashmap/tests/: CMakeLists.txt
Dictionary/hashtable/: CMakeLists.txt
Dictionary/hashtable/include/: hashtable.hh
Dictionary/hashtable/tests/: CMakeLists.txt  hashtable-test.cc
Dictionary/list/: CMakeLists.txt
Dictionary/list/include/: list.hh
Dictionary/list/tests/: list-test.cc
Dictionary/texthandler/: CMakeLists.txt
Dictionary/texthandler/include/: texthandler.hh
Dictionary/texthandler/src/: texthandler.cc
Dictionary/texthandler/tests/: CMakeLists.txt  test_text  test_text2  texthandlers-test.cc
Queue/: .clang-tidy  CMakeLists.txt  README.MD
Queue/benchmark/: CMakeLists.txt  queue-bench-list-wins.cc  queue-bench-stack-wins.cc  queue-bench.cc
Queue/include/: queue.hh
Queue/list/: CMakeLists.txt
Queue/list/include/: list.hh
Queue/list/tests/: CMakeLists.txt  list-test.cc
Queue/stack/: CMakeLists.txt
Queue/stack/include/: Stack.hh  stack.hh
Queue/stack/source/: stack-bool.cc
Queue/stack/tests/: CMakeLists.txt  stack-test.cc
Queue/tests/: CMakeLists.txt  queue-test.cc
Stack/: .clang-format  .clang-tidy  BUILD.MD  CMakeLists.txt  README.MD
Stack/include/: Stack.hh
Stack/source/: Stack-bool.cc  stack-bool.cc
Stack/tests/: CMakeLists.txt  speed-test.cc  test.cc
